app-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-api-service
spec:
  selector:
    app: angular-api
  ports:
  - port: 4200
    targetPort: 4200
